platform/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: voxchat-gateway
  namespace: voxchat
  annotations:
    external-dns.alpha.kubernetes.io/hostname: voxchat.in,api.voxchat.in
spec:
  gatewayClassName: voxchat-gateway-class
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: voxchat-gateway-lb
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      hostname: "*.voxchat.in"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: Same

    - name: https-root
      hostname: "voxchat.in"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: Same
